# ifs_data

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  Data.txt  MANIFEST.in  README.md  TTcorr-designdata.csv  TTcorr.json  compute_data.py  crossover_dataframe.py  data_analysis.ipynb  data_process.py  designData.py  documentation_of_design_statistics  project.py  pyproject.toml  setup.cfg  setup.py  single_structure_data.py  staple_dataframe.py  temp.py  utils.py
Files/: .MK_beachball1-7_data.mat.icloud
__MACOSX/nanodesign/: .___init__.py  .___pycache__  ._algorithms  ._converters  ._core.py  ._data  ._res  ._utils  ._visualizer
__MACOSX/nanodesign/algorithms/: .___init__.py  .___pycache__
__MACOSX/nanodesign/converters/: .___init__.py  .___pycache__  ._cadnano  ._cando  ._converter.py  ._dna_sequence_data.py  ._pdbcif  ._simdna  ._viewer
__MACOSX/nanodesign/data/: .___init__.py  .___pycache__  ._base.py  ._dna_structure.py  ._dna_structure_helix.py  ._domain.py  (+6 more)
class/: crossover.py
classes/: crossover.py  nicks.py
ifs_data/: __init__.py  version.py
ifs_data/core/: designData.py  utils.py
ifs_data/data/: crossover.py  nicks.py
ifs_data/database/: compute_data.py  crossover_dataframe.py  staple_dataframe.py
ifs_data/scripts/: __init__.py  ifs.py  ifs_db.py
nanodesign/converters/: converter.py  dna_sequence_data.py
nanodesign/data/: __init__.py  dna_structure.py  dna_structure_helix.py  domain.py  strand.py
nanodesign/utils/: xform.py
nanodesign/visualizer/: atomic_struct.py  cmd.py  geometry.py  graphics.py  helix.py  strand.py
(+46 files in other folders)
